fixed the form spacing by reducing the grid template

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ main {
 
 .form {
   display: grid;
-  grid-template: 100% 100% / 1fr 1fr;
+  grid-template: 50% 50% / 1fr 1fr;
   gap: 17px;
 }
 
